# verisolid

./: CMakeLists.txt  main.cpp
